Fixed spacing of contact tiles

--- a/css/base.css
+++ b/css/base.css
@@ -422,6 +422,13 @@ textarea {
 /* ------------------------------------------------------------------- 
  * small screens - (_grid.scss)
  * ------------------------------------------------------------------- */
+
+@media screen and (min-width: 769px){
+	.offset_16 {
+		padding-left : 16.6667%;
+		padding-right : 16.6667%;
+	}
+}
 @media screen and (max-width: 1024px) {
 	.offset_33 {
 		margin-left : 0;
